# rast-jit-vm

./: Cargo.toml  README.md
benches/: mandelbrot  mandelbrot.py  mandelbrot.rs
bins/: basic.rs  mandelbrot_compile.rs  mandelbrot_compile_100k.rs  mandelbrot_eval.rs  mandelbrot_eval_100k.rs
src/: ast.rs  examples.rs  lib.rs  vm.rs
src/ast/: from_value.rs  into_value.rs
src/examples/: fibonacci.rs  mandelbrot.rs
src/vm/: compile.rs  eval.rs
tests/: smoke.rs
